{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 22,
  "lineage": "2dae6083-877c-7fda-db39-aaff7227bf89",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AROBINE-INSTANCE-AZ-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a6eaae9938c858c",
            "arn": "arn:aws:ec2:us-east-1:949160236929:instance/i-0fa89b644a78210ab",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fa89b644a78210ab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a5f21c425eb6be81",
            "private_dns": "ip-10-0-2-119.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c144eba05d36b260",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03002228f669ebbca",
            "tags": {
              "Name": "AROBINE-INSTANCE-AZ-A"
            },
            "tags_all": {
              "Name": "AROBINE-INSTANCE-AZ-A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01052a337e71f9ef6"
            ]
          },
          "dependencies": [
            "aws_instance.AROBINE-INSTANCE-PUBLIC",
            "aws_security_group.AROBINE-SG-LOAD-BALANCER",
            "aws_security_group.AROBINE-SG-PUBLIC",
            "aws_security_group.AROBINE-SG-WEB",
            "aws_subnet.AROBINE-SUBNET-AZ-A",
            "aws_subnet.AROBINE-SUBNET-PUBLIC",
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AROBINE-INSTANCE-AZ-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a6eaae9938c858c",
            "arn": "arn:aws:ec2:us-east-1:949160236929:instance/i-03e28013be2e9cf17",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03e28013be2e9cf17",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02a8b2e037a8bc24d",
            "private_dns": "ip-10-0-3-194.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-078a3b5a2287c0a5b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cffb6d358a001772",
            "tags": {
              "Name": "AROBINE-INSTANCE-AZ-B"
            },
            "tags_all": {
              "Name": "AROBINE-INSTANCE-AZ-B"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01052a337e71f9ef6"
            ]
          },
          "dependencies": [
            "aws_instance.AROBINE-INSTANCE-PUBLIC",
            "aws_security_group.AROBINE-SG-LOAD-BALANCER",
            "aws_security_group.AROBINE-SG-PUBLIC",
            "aws_security_group.AROBINE-SG-WEB",
            "aws_subnet.AROBINE-SUBNET-AZ-B",
            "aws_subnet.AROBINE-SUBNET-PUBLIC",
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AROBINE-INSTANCE-AZ-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a6eaae9938c858c",
            "arn": "arn:aws:ec2:us-east-1:949160236929:instance/i-0016b646dfcd55cc7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0016b646dfcd55cc7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0452e3b6a7bd4c7be",
            "private_dns": "ip-10-0-4-27.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00189bb4cb9c08f74",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00656667551538404",
            "tags": {
              "Name": "AROBINE-INSTANCE-AZ-C"
            },
            "tags_all": {
              "Name": "AROBINE-INSTANCE-AZ-C"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01052a337e71f9ef6"
            ]
          },
          "dependencies": [
            "aws_instance.AROBINE-INSTANCE-PUBLIC",
            "aws_security_group.AROBINE-SG-LOAD-BALANCER",
            "aws_security_group.AROBINE-SG-PUBLIC",
            "aws_security_group.AROBINE-SG-WEB",
            "aws_subnet.AROBINE-SUBNET-AZ-C",
            "aws_subnet.AROBINE-SUBNET-PUBLIC",
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AROBINE-INSTANCE-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a6eaae9938c858c",
            "arn": "arn:aws:ec2:us-east-1:949160236929:instance/i-051b1695220ef132f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-051b1695220ef132f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d17bec10821b53ca",
            "private_dns": "ip-10-0-1-113.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.113",
            "public_ip": "54.175.106.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-045005ba9f27ff20c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d760334a7a4400a",
            "tags": {
              "Name": "AROBINE-INSTANCE-PUBLIC"
            },
            "tags_all": {
              "Name": "AROBINE-INSTANCE-PUBLIC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06d5abe538a672b31"
            ]
          },
          "dependencies": [
            "aws_security_group.AROBINE-SG-LOAD-BALANCER",
            "aws_security_group.AROBINE-SG-PUBLIC",
            "aws_security_group.AROBINE-SG-WEB",
            "aws_subnet.AROBINE-SUBNET-PUBLIC",
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "AROBINE-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:internet-gateway/igw-0535d9abae427dd2a",
            "id": "igw-0535d9abae427dd2a",
            "owner_id": "949160236929",
            "tags": {
              "Name": "AROBINE-IGW"
            },
            "tags_all": {
              "Name": "AROBINE-IGW"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "AROBINE-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:949160236929:loadbalancer/app/AROBINE-LB/8da9a57a11b06bab",
            "arn_suffix": "app/AROBINE-LB/8da9a57a11b06bab",
            "desync_mitigation_mode": "defensive",
            "dns_name": "AROBINE-LB-1721792882.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:949160236929:loadbalancer/app/AROBINE-LB/8da9a57a11b06bab",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "AROBINE-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0564ca9cf41e0b903"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00656667551538404"
              },
              {
                "subnet_id": "subnet-03002228f669ebbca"
              },
              {
                "subnet_id": "subnet-0cffb6d358a001772"
              }
            ],
            "subnets": [
              "subnet-00656667551538404",
              "subnet-03002228f669ebbca",
              "subnet-0cffb6d358a001772"
            ],
            "vpc_id": "vpc-00044104b068417ac",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.AROBINE-SG-LOAD-BALANCER",
            "aws_subnet.AROBINE-SUBNET-AZ-A",
            "aws_subnet.AROBINE-SUBNET-AZ-B",
            "aws_subnet.AROBINE-SUBNET-AZ-C",
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "AROBINE-LB-LISTENER",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "AROBINE-LB-TG2-ATTACH-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "AROBINE-LB-TG2-ATTACH-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "AROBINE-LB-TG2-ATTACH-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "AROBINE-RTB-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:route-table/rtb-08b23d0a9e7ced186",
            "id": "rtb-08b23d0a9e7ced186",
            "owner_id": "949160236929",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0535d9abae427dd2a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "AROBINE-RTB-PUBLIC"
            },
            "tags_all": {
              "Name": "AROBINE-RTB-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-00044104b068417ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.AROBINE-IGW",
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AROBINE-RTB-PUBLIC-ASSOC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b899f475e519e017",
            "route_table_id": "rtb-08b23d0a9e7ced186",
            "subnet_id": "subnet-02d760334a7a4400a"
          },
          "dependencies": [
            "aws_internet_gateway.AROBINE-IGW",
            "aws_route_table.AROBINE-RTB-PUBLIC",
            "aws_subnet.AROBINE-SUBNET-PUBLIC",
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AROBINE-RTB-PUBLIC-ASSOC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08db93ad330ed88f8",
            "route_table_id": "rtb-08b23d0a9e7ced186",
            "subnet_id": "subnet-03002228f669ebbca"
          },
          "dependencies": [
            "aws_internet_gateway.AROBINE-IGW",
            "aws_route_table.AROBINE-RTB-PUBLIC",
            "aws_subnet.AROBINE-SUBNET-AZ-A",
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AROBINE-RTB-PUBLIC-ASSOC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3fdefbc7fc21956",
            "route_table_id": "rtb-08b23d0a9e7ced186",
            "subnet_id": "subnet-0cffb6d358a001772"
          },
          "dependencies": [
            "aws_internet_gateway.AROBINE-IGW",
            "aws_route_table.AROBINE-RTB-PUBLIC",
            "aws_subnet.AROBINE-SUBNET-AZ-B",
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AROBINE-RTB-PUBLIC-ASSOC3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0977c7acb489230",
            "route_table_id": "rtb-08b23d0a9e7ced186",
            "subnet_id": "subnet-00656667551538404"
          },
          "dependencies": [
            "aws_internet_gateway.AROBINE-IGW",
            "aws_route_table.AROBINE-RTB-PUBLIC",
            "aws_subnet.AROBINE-SUBNET-AZ-C",
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "AROBINE-SG-LOAD-BALANCER",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:security-group/sg-0564ca9cf41e0b903",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0564ca9cf41e0b903",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230922084256195400000001",
            "name_prefix": "terraform-",
            "owner_id": "949160236929",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AROBINE-SG-LOAD-BALANCER"
            },
            "tags_all": {
              "Name": "AROBINE-SG-LOAD-BALANCER"
            },
            "timeouts": null,
            "vpc_id": "vpc-00044104b068417ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "AROBINE-SG-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:security-group/sg-06d5abe538a672b31",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d5abe538a672b31",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3128,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01052a337e71f9ef6"
                ],
                "self": false,
                "to_port": 3128
              }
            ],
            "name": "terraform-20230922084301247700000003",
            "name_prefix": "terraform-",
            "owner_id": "949160236929",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AROBINE-SG-PUBLIC"
            },
            "tags_all": {
              "Name": "AROBINE-SG-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-00044104b068417ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.AROBINE-SG-LOAD-BALANCER",
            "aws_security_group.AROBINE-SG-WEB",
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "AROBINE-SG-WEB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:security-group/sg-01052a337e71f9ef6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01052a337e71f9ef6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0564ca9cf41e0b903"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230922084258667500000002",
            "name_prefix": "terraform-",
            "owner_id": "949160236929",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AROBINE-SG-PUBLIC"
            },
            "tags_all": {
              "Name": "AROBINE-SG-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-00044104b068417ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.AROBINE-SG-LOAD-BALANCER",
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "AROBINE-SUBNET-AZ-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:subnet/subnet-03002228f669ebbca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03002228f669ebbca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949160236929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AROBINE-SUBNET-AZ-A"
            },
            "tags_all": {
              "Name": "AROBINE-SUBNET-AZ-A"
            },
            "vpc_id": "vpc-00044104b068417ac"
          },
          "dependencies": [
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "AROBINE-SUBNET-AZ-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:subnet/subnet-0cffb6d358a001772",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cffb6d358a001772",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949160236929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AROBINE-SUBNET-AZ-B"
            },
            "tags_all": {
              "Name": "AROBINE-SUBNET-AZ-B"
            },
            "vpc_id": "vpc-00044104b068417ac"
          },
          "dependencies": [
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "AROBINE-SUBNET-AZ-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:subnet/subnet-00656667551538404",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00656667551538404",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949160236929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AROBINE-SUBNET-AZ-C"
            },
            "tags_all": {
              "Name": "AROBINE-SUBNET-AZ-C"
            },
            "vpc_id": "vpc-00044104b068417ac"
          },
          "dependencies": [
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "AROBINE-SUBNET-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:subnet/subnet-02d760334a7a4400a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d760334a7a4400a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949160236929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AROBINE-SUBNET-PUBLIC"
            },
            "tags_all": {
              "Name": "AROBINE-SUBNET-PUBLIC"
            },
            "vpc_id": "vpc-00044104b068417ac"
          },
          "dependencies": [
            "aws_vpc.AROBINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "AROBINE-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:vpc/vpc-00044104b068417ac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cc68e5ece7b44706",
            "default_route_table_id": "rtb-0c88b483454dc7c85",
            "default_security_group_id": "sg-099847beef4935a87",
            "dhcp_options_id": "dopt-0f37752447b5d60ae",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00044104b068417ac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c88b483454dc7c85",
            "owner_id": "949160236929",
            "tags": {
              "Name": "AROBINE-VPC"
            },
            "tags_all": {
              "Name": "AROBINE-VPC"
            }
          }
        }
      ]
    }
  ]
}